[package]
name = "pylyzer"
description = "A static code analyzer & language server for Python"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[workspace]
members = [ "analyzer-test",
    "crates/py2erg",
]

[workspace.package]
version = "0.0.52"
authors = ["Shunsuke Shibayama <sbym1346@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/ALFecki/interpreter"

[workspace.dependencies]
erg_common = { version = "0.6.33-nightly.2", features = ["py_compat", "els"] }
erg_compiler = { version = "0.6.33-nightly.2", features = ["py_compat", "els"] }
els = { version = "0.1.45-nightly.2", features = ["py_compat"] }
rustpython-parser = { git = "https://github.com/RustPython/Parser", version = "0.3.1", features = ["all-nodes-with-ranges", "location"] }
rustpython-ast = { git = "https://github.com/RustPython/Parser", version = "0.3.1", features = ["all-nodes-with-ranges", "location"] }


[features]
debug = ["erg_compiler/debug", "erg_common/debug", "py2erg/debug"]
large_thread = ["erg_compiler/large_thread", "erg_common/large_thread", "els/large_thread"]
pretty = ["erg_compiler/pretty", "erg_common/pretty"]
backtrace = ["erg_common/backtrace"]
experimental = ["els/experimental", "erg_compiler/experimental", "erg_common/experimental"]

[dependencies]
erg_compiler = { workspace = true }
erg_common = { workspace = true }
els = { workspace = true }
rustpython-parser = { workspace = true }
rustpython-ast = { workspace = true }
py2erg = { version = "0.0.52", path = "./crates/py2erg" }

[lib]
path = "src/lib.rs"
