[package]
name = "analyzer-test"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erg_compiler = { version = "0.6.33-nightly.2", features = ["py_compat", "els"] }
erg_common = { version = "0.6.33-nightly.2", features = ["py_compat", "els"] }
pylyzer = {path = "../" }