[package]
name = "rustpython-format"
description = "Format helpers for RustPython"
version = { workspace = true }

[features]
default = ["malachite-bigint"]

[dependencies]
rustpython-literal = { workspace = true }

bitflags = { workspace = true }
itertools = { workspace = true }
malachite-bigint = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
num-traits = { workspace = true }
